apps/c2d2/c2d2-app.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: c2d2
  name: mongodb
spec:
  selector:
    app: c2d2-mongodb
  ports:
  - name: mongodb
    port: 27017
    targetPort: 27017

---

apiVersion: v1
kind: Namespace
metadata:
  labels:
    app.kubernetes.io/managed-by: argocd
    app.kubernetes.io/name: c2d2
    app.kubernetes.io/component: namespace
  name: c2d2

---

apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
 name: c2d2
 namespace: c2d2
spec:
  gateways:
    - istio-system/public
  hosts:
   - c2d2.bigbang.dev
  http:
  - route:
    - destination:
        port:
          number: 9898
        host: c2d2-app

---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
 name: c2d2-mongo
 namespace: c2d2
spec:
  gateways:
    - istio-system/public
  hosts:
   - c2d2-mongo.bigbang.dev
  http:
  - route:
    - destination:
        port:
          number: 27017
        host: c2d2-mongo-mongodb
